# pgmcp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md  build.rs  pgmcp.service
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: verify.yml
assets/: client_profiles.toml
benches/: mcp_tool_latency.rs  time_series_nearest.rs
docs/: DEVELOPING.md  architecture.md  configuration.md  git-indexing.md  integration.md  libdictenstein-char-resident-eviction-corruption-bug.md  mcp-capabilities.md  monitoring.md  operations.md  rest-api.md  schema.md  search-modes.md  tool-catalog.md  work-summary.md
docs/context-tape/: 01-overview-and-theory.md  02-architecture-three-planes.md  03-addressing-and-pages.md  04-data-plane-store-and-ooc.md  05-index-portfolio.md  06-control-plane-paging-engine.md  07-determinism-and-resume.md  08-persistence-schema.md  09-mcp-verb-surface.md  10-trust-boundary-and-security.md  11-rlm-integration-and-experiment.md  12-weighted-automata-constrained-addressing.md  README.md
docs/csm/: 00-motivation-and-overview.md  01-cfsm-mpst-foundations.md  02-projection-and-wellformedness.md  03-safety-metatheorems.md  04-automata-spine.md  05-data-model-and-compiled-machines.md  06-conformance-and-the-observer.md  07-a2a-protocol-and-agent-model.md  08-five-patterns-as-protocols.md  09-recursive-language-model.md  10-state-is-the-trace.md  11-crucible-plan-execution.md  12-category-theory-layer.md  13-formal-verification-artifacts.md  14-tool-surface-and-worked-examples.md  15-glossary-and-notation.md  README.md
docs/decisions/: 001-no-pgvectorscale-migration.md  002-sota-memory-server-design.md  003-tag-set-over-enum-for-types.md  004-bge-m3-embedding-migration.md  004-work-item-tracker.md  005-remove-minilm-384-path.md  006-adjacent-tagging-recursive-serde.md  008-timescaledb-evaluation.md  009-a2a-coordination-state-machines.md  010-json-data-tables.md  (+24 more)
examples/: gpu_smoke.rs  tla_encode_demo.rs
pgmcp-testing/: Cargo.toml  build.rs
pgmcp-testing/fixtures/golden/: README.md
pgmcp-testing/fixtures/golden/chunker/: crlf_content.postcard  jsonl_mixed.postcard  long_rust_with_overlap.postcard  short_rust_file.postcard  single_line.postcard
pgmcp-testing/fixtures/golden/claude_chunker/: session_basic.postcard  session_mixed_types.postcard
pgmcp-testing/fixtures/golden/ctf_idf/: three_topics_ten_chunks.postcard
pgmcp-testing/fixtures/golden/fcm/: two_blobs_seed_42.postcard
pgmcp-testing/fixtures/golden/import_extractor/: c_include.postcard  go_import.postcard  java_import.postcard  javascript_import_require.postcard  python_import_from.postcard  rust_use_mod_extern.postcard
pgmcp-testing/fixtures/golden/merge_toml/: arrays_union.postcard  tables_user_wins_scalars.postcard
pgmcp-testing/fixtures/golden/semantic_extraction/: metta_typed_rule.postcard  python_basic.postcard  rholang_contract.postcard  rust_basic.postcard
pgmcp-testing/src/: cli_harness.rs  db_harness.rs  fixtures.rs  golden.rs  lib.rs  mocks.rs  pool_tool_helpers.rs  proptest_config.rs  skip.rs
pgmcp-testing/src/eval/: corpus.rs  docstring.rs  judge.rs  mod.rs  query.rs  rerank.rs  runner.rs  stats.rs
pgmcp-testing/src/fixtures/: synthetic_corpus.rs  synthetic_git_history.rs
pgmcp-testing/tests/: a2a_best_practices.rs  adaptive_tool_surface.rs  api_rest_e2e.rs  api_status_endpoint.rs  bug_gate_query.rs  categorical_lint.rs  category2.rs  category3.rs  cge_target_file_cascade.rs  claude_chunker_nul_bytes.rs  cli_subcommands_smoke.rs  config_watcher_e2e.rs  context_tape_preregister.rs  corpus_topics.rs  cron_history_integration.rs  cron_jobs_e2e.rs  cross_project_coupling.rs  cross_project_cve_exposure.rs  cross_project_graph_fields.rs  cross_project_topic_redundancy.rs  crucible_profiling_coverage.rs  crucible_tools_coverage.rs  daemon_lifecycle_e2e.rs  daemon_restart_lock_safety.rs  data_table_links_lifecycle.rs  db_session_timeouts.rs  db_sql_surface_integration.rs  delivery_mailbox.rs  deps_store_integration.rs  digest_compose_smoke.rs  digest_rate_limit.rs  digest_trust_boundary.rs  docker_cleanup_cron_registered.rs  effect_breakdown_project_scope.rs  effect_drift_ledger.rs  embedder_bgem3_loads_from_pth.rs  embedding_backend_smoke.rs  embedding_migration_full.rs  embedding_triplet_sanity.rs  eval_semantic_quality.rs  (+202 more)
pgmcp-testing/tests/common/: mod.rs
proptest-regressions/: config.txt
scripts/: build-webui-cljs.sh  check-webui-architecture.sh  decode-audit.sh  measure_recovery_times.sh  smoke-webui-render.py  tlc-capped.sh  verify.sh
src/: config.rs  context.rs  daemon.rs  daemon_state.rs  error.rs  lib.rs  logging.rs  main.rs  mandates.rs  mmap_array.rs  patterns.rs  sessions.rs  shutdown.rs
src/a2a/: mod.rs  (+13 more)
tests/: README.md  fcm_bf16_un_normalized.rs  fcm_fp16_vs_fp32_convergence.rs  gpu_fallback_smoke.rs  graph_brandes_parallel.rs  integration.rs  k_selector_xie_beni.rs  mcp_protocol.rs  online_fcm_bounded_memory.rs  topic_hierarchy_mcp_roundtrip.rs
webui/: Cargo.toml  build.rs  package-lock.json  package.json  shadow-cljs.edn
webui/resources/: app.css  index.html
webui/resources/grammars/bash/: grammar.wasm
webui/resources/grammars/clojure/: grammar.wasm
webui/resources/grammars/json/: grammar.wasm
webui/resources/grammars/markdown/: grammar.wasm
webui/resources/grammars/markdown-inline/: grammar.wasm
webui/resources/grammars/python/: grammar.wasm
webui/resources/grammars/rust/: grammar.wasm
webui/resources/grammars/toml/: grammar.wasm
webui/src/: assets.rs  db.rs  lib.rs  security.rs  state.rs  ws.rs
webui/src-cljs/pgmcp/webui/: core.cljs  domain.cljs  events.cljs  fx.cljs  machine.cljs  model.cljs  render.cljs  schema.cljs  subs.cljs  viz.cljs
webui/src-cljs/pgmcp/webui/views/: clients.cljs  code.cljs  common.cljs  database.cljs  editor.cljs  events.cljs  experiments.cljs  layout.cljs  logs.cljs  mandates.cljs  markdown.cljs  metrics.cljs  overview.cljs  panel.cljs  query.cljs  resources.cljs  shell.cljs  widgets.cljs  work.cljs
webui/test-cljs/pgmcp/webui/: machine_test.cljs  render_test.cljs
(+1482 files in other folders)
