# Workspace root. The main `pgmcp` crate lives at the root for git/CI
# continuity; `pgmcp-testing` is a sibling member providing test fixtures
# (mocks, factories) consumed via [dev-dependencies] below.
[workspace]
members = [".", "pgmcp-testing"]

[package]
name = "pgmcp"
version = "0.1.0"
edition = "2024"
description = "PostgreSQL + pgvector MCP File Indexer for Claude Code and Codex"
license = "Apache-2.0"

# CUDA is a mandatory dependency. The daemon is split into a CUDA backend
# (GPU FCM) and a CPU fallback backend that cooperate at runtime — both
# are always compiled. A pure-CPU build mode is intentionally NOT provided;
# the FcmBackend trait in src/fcm/ is the seam where a future non-CUDA
# implementation could be plugged in without feature gates.
[features]

[dependencies]
# ONNX Runtime — GPU-accelerated embedding inference via CUDA execution provider.
# CUDA is mandatory; `ort/cuda` is unconditional.
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# MCP server
rmcp = { version = "1.1", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Embeddings — direct candle stack. Pure Rust BERT inference; uses cudarc
# (already a direct dep) for CUDA. No ONNX Runtime, no fastembed, no
# pyke-distributed CUDA-12 native bundle.
candle-core = { version = "=0.10.2", default-features = false, features = ["cuda"] }
candle-nn = { version = "=0.10.2", default-features = false, features = ["cuda"] }
candle-transformers = { version = "=0.10.2", default-features = false, features = ["cuda"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
safetensors = "0.7"
hf-hub = { version = "0.4", default-features = false, features = ["rustls-tls", "ureq"] }
ureq = { version = "2.12", default-features = false, features = ["tls", "json"] }
# Used by refresh_pattern_catalog's source-fetch path. ureq 2.x is HTTP/1.1
# only, but many indexed sources (Wikipedia, AWS, Microsoft Learn, arXiv)
# serve HTTP/2 exclusively and truncate responses to non-HTTP/2 clients.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "blocking", "json"] }
sha2 = "0.10"

# Filesystem
notify = "7"
ignore = "0.4"

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "6"
arc-swap = "1"
num_cpus = "1"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"
axum = "0.8"

# Systemd
sd-notify = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
regex = "1"
libc = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"
ndarray = { version = "0.16", features = ["blas", "serde"] }
petgraph = "0.7"
# Tree-sitter (Tier 0e). Per-language grammar crates are added incrementally
# as `src/parsing/<lang>.rs` backends land — see plan
# `~/.claude/plans/help-me-design-software-ancient-flurry.md`. The bare
# `tree-sitter` core ships first so the trait + types compile before any
# concrete backend.
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-scala = "0.24"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
# Rholang grammar lives in the user's local rholang-rs workspace; depend by
# path. The published package name is `rholang-tree-sitter` (not the canonical
# `tree-sitter-rholang` style); aliased here so usage matches the convention.
# Migration path: switch to a published crate once available.
tree-sitter-rholang = { package = "rholang-tree-sitter", path = "/home/dylon/Workspace/f1r3fly.io/rholang-rs/rholang-tree-sitter" }
tree-sitter-clojure = "0.1"
# Rust backend uses the native `syn` parser instead of tree-sitter — replicates
# the proven pattern from MeTTa-Compiler's `tools/gc-root-audit/` static
# analysis. `proc-macro2 = { version = "1", features = ["span-locations"] }`
# is required for `Span::start().line` on stable Rust.
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
memmap2 = "0.9"
futures = "0.3"
tempfile = "3"
cudarc = { version = "0.19.4", features = ["cublas", "cublaslt", "cuda-version-from-build-system", "f16"] }
half = "2"
heed = "0.20"
bincode = "1"
# Already a transitive dep via sqlx; promoted to direct so the DbClient trait
# can use #[async_trait] on its method signatures.
async-trait = "0.1"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
# Note: `pgmcp-testing` is intentionally NOT a dev-dependency of this crate.
# Cargo cannot resolve the cycle pgmcp ↔ pgmcp-testing without two separate
# compilations of `pgmcp`. Cross-crate tests that exercise pgmcp's public API
# (e.g. `McpServer`) using `pgmcp-testing` mocks live under
# `pgmcp-testing/tests/`, where the dependency edge is one-way (testing →
# main) and the cycle does not arise.
#
# Real-Postgres integration tests (no Docker) also live under
# `pgmcp-testing/tests/` — see `tests/README.md` for the local setup.

[[test]]
name = "gpu_fallback_smoke"
path = "tests/gpu_fallback_smoke.rs"
