# Workspace root. The main `pgmcp` crate lives at the root for git/CI
# continuity; `pgmcp-testing` is a sibling member providing test fixtures
# (mocks, factories) consumed via [dev-dependencies] below.
[workspace]
members = [".", "pgmcp-testing"]

[package]
name = "pgmcp"
version = "0.1.0"
edition = "2024"
description = "PostgreSQL + pgvector MCP File Indexer for Claude Code and Codex"
license = "Apache-2.0"

# CUDA is a mandatory dependency. Production compute paths fail closed when
# CUDA initialization fails. The CPU FCM backend is retained for deterministic
# tests and explicit diagnostics, not as a build or runtime fallback mode.

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# MCP server
rmcp = { version = "1.1", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Embeddings — direct candle stack. Pure Rust BERT inference; uses cudarc
# (already a direct dep) for CUDA. No ONNX Runtime, no fastembed, no
# pyke-distributed CUDA-12 native bundle.
candle-core = { version = "=0.10.2", default-features = false, features = ["cuda"] }
candle-nn = { version = "=0.10.2", default-features = false, features = ["cuda"] }
candle-transformers = { version = "=0.10.2", default-features = false, features = ["cuda"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
safetensors = "0.7"
hf-hub = { version = "0.4", default-features = false, features = ["rustls-tls", "ureq"] }
ureq = { version = "2.12", default-features = false, features = ["tls", "json"] }
# Used by refresh_pattern_catalog's source-fetch path. ureq 2.x is HTTP/1.1
# only, but many indexed sources (Wikipedia, AWS, Microsoft Learn, arXiv)
# serve HTTP/2 exclusively and truncate responses to non-HTTP/2 clients.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "blocking", "json"] }
sha2 = "0.10"

# Filesystem
notify = "7"
ignore = "0.4"

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "6"
arc-swap = "1"
num_cpus = "1"

# Macro token concatenation — used by the `dispatch_tool!` CLI dispatcher in
# `src/mcp/server.rs` to expand `$method` → `super::tools::tool_$method::tool_$method`
# so the CLI test harness can invoke tool bodies directly, bypassing the rmcp
# `#[tool]` wrapper (which now requires a `RequestContext<RoleServer>` we do
# not synthesize in the test path).
paste = "1"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Document indexing: subprocess + Unicode normalization for the extraction
# pipeline (PDF/PostScript/DOCX/EPUB → normalized plain text). `which` is
# used at daemon startup to preflight CLI tools (`pdftotext`, `ps2ascii`,
# `pandoc`); `unicode-normalization` provides the NFKC pass that collapses
# ligatures and fancy punctuation before storage so MCP tool results are
# token-efficient.
which = "6"
unicode-normalization = "0.1"

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"
axum = "0.8"

# Systemd
sd-notify = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
regex = "1"
libc = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"
ndarray = { version = "0.16", features = ["blas", "serde"] }
petgraph = "0.7"
# Tree-sitter (Tier 0e). Per-language grammar crates are added incrementally
# as `src/parsing/<lang>.rs` backends land — see plan
# `~/.claude/plans/help-me-design-software-ancient-flurry.md`. The bare
# `tree-sitter` core ships first so the trait + types compile before any
# concrete backend.
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-scala = "0.24"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
# Rholang grammar lives in the user's local rholang-rs workspace; depend by
# path. The published package name is `rholang-tree-sitter` (not the canonical
# `tree-sitter-rholang` style); aliased here so usage matches the convention.
# Migration path: switch to a published crate once available.
tree-sitter-rholang = { package = "rholang-tree-sitter", path = "/home/dylon/Workspace/f1r3fly.io/rholang-rs/rholang-tree-sitter" }
# MeTTa grammar lives in the user's local MeTTa-Compiler workspace; depend by
# path. The crate exports `language()` (function), not a `LANGUAGE` constant,
# so backend init calls `tree_sitter_metta::language()` and converts via
# `Into<tree_sitter::Language>`. Migration path: switch to a published crate
# once available.
tree-sitter-metta = { package = "tree-sitter-metta", path = "/home/dylon/Workspace/f1r3fly.io/MeTTa-Compiler/tree-sitter-metta" }
tree-sitter-clojure = "0.1"
# Formal-verification grammars (post-SOTA addition). Coq has no published
# tree-sitter crate yet — Coq's symbol/import extraction uses regex
# patterns in `src/parsing/coq.rs` (still implements LanguageBackend).
tree-sitter-tlaplus = "1.5"
tree-sitter-lean4 = "0.3"
# Rust backend uses the native `syn` parser instead of tree-sitter — replicates
# the proven pattern from MeTTa-Compiler's `tools/gc-root-audit/` static
# analysis. `proc-macro2 = { version = "1", features = ["span-locations"] }`
# is required for `Span::start().line` on stable Rust.
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
memmap2 = "0.9"
futures = "0.3"
tempfile = "3"
# SOTA Phase 3 (NCD clone detection): zstd compressor for the
# Cilibrasi-Vitányi 2005 Normalized Compression Distance metric.
zstd = { version = "0.13", default-features = false }
# SOTA Phase 6 (CVE supply chain): Cargo.lock + Python requirements parsing.
cargo-lock = "10"
# SOTA Phase 6 (secret detection): Shannon-entropy scoring.
entropy = "0.4"
# SOTA Phase 7 (semver-break audit): rename detection via Levenshtein.
strsim = "0.11"
# SOTA Phase 9 (data engineering): SQL migration parsing.
sqlparser = "0.55"
# SOTA Phase 11 (commit topic drift): Porter stemming for TF-IDF.
rust-stemmers = "1.2"
# Per-call exclude_paths support for documented_tech_debt + any other
# tool that takes a glob list. Already a transitive dep via `ignore`;
# promoted to direct so the version is pinned explicitly.
globset = "0.4"
cudarc = { version = "0.19.4", features = ["cublas", "cublaslt", "cuda-version-from-build-system", "f16"] }
half = "2"
heed = "0.20"
bincode = "1"
# Already a transitive dep via sqlx; promoted to direct so the DbClient trait
# can use #[async_trait] on its method signatures.
async-trait = "0.1"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.7", features = ["async_tokio"] }

[[bench]]
name = "mcp_tool_latency"
path = "benches/mcp_tool_latency.rs"
harness = false
# Note: `pgmcp-testing` is intentionally NOT a dev-dependency of this crate.
# Cargo cannot resolve the cycle pgmcp ↔ pgmcp-testing without two separate
# compilations of `pgmcp`. Cross-crate tests that exercise pgmcp's public API
# (e.g. `McpServer`) using `pgmcp-testing` mocks live under
# `pgmcp-testing/tests/`, where the dependency edge is one-way (testing →
# main) and the cycle does not arise.
#
# Real-Postgres integration tests (no Docker) also live under
# `pgmcp-testing/tests/` — see `tests/README.md` for the local setup.

[[test]]
name = "gpu_fallback_smoke"
path = "tests/gpu_fallback_smoke.rs"
