# Workspace root. The main `pgmcp` crate lives at the root for git/CI
# continuity; `pgmcp-testing` is a sibling member providing test fixtures
# (mocks, factories) consumed via [dev-dependencies] below.
[workspace]
members = [".", "pgmcp-testing"]

[package]
name = "pgmcp"
version = "0.1.0"
edition = "2024"
description = "PostgreSQL + pgvector MCP File Indexer for Claude Code and Codex"
license = "Apache-2.0"

# CUDA is a mandatory dependency. Production compute paths fail closed when
# CUDA initialization fails. The CPU FCM backend is retained for deterministic
# tests and explicit diagnostics, not as a build or runtime fallback mode.

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# MCP server
rmcp = { version = "1.1", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Embeddings — direct candle stack. Pure Rust BERT inference; uses cudarc
# (already a direct dep) for CUDA. No ONNX Runtime, no fastembed, no
# pyke-distributed CUDA-12 native bundle.
candle-core = { version = "=0.10.2", default-features = false, features = ["cuda"] }
candle-nn = { version = "=0.10.2", default-features = false, features = ["cuda"] }
candle-transformers = { version = "=0.10.2", default-features = false, features = ["cuda"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
safetensors = "0.7"
hf-hub = { version = "0.4", default-features = false, features = ["rustls-tls", "ureq"] }
ureq = { version = "2.12", default-features = false, features = ["tls", "json"] }
# Used by refresh_pattern_catalog's source-fetch path. ureq 2.x is HTTP/1.1
# only, but many indexed sources (Wikipedia, AWS, Microsoft Learn, arXiv)
# serve HTTP/2 exclusively and truncate responses to non-HTTP/2 clients.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "blocking", "json"] }
sha2 = "0.10"

# Filesystem
notify = "7"
ignore = "0.4"

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "6"
arc-swap = "1"
num_cpus = "1"

# Macro token concatenation — used by the `dispatch_tool!` CLI dispatcher in
# `src/mcp/server.rs` to expand `$method` → `super::tools::tool_$method::tool_$method`
# so the CLI test harness can invoke tool bodies directly, bypassing the rmcp
# `#[tool]` wrapper (which now requires a `RequestContext<RoleServer>` we do
# not synthesize in the test path).
paste = "1"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Document indexing: subprocess + Unicode normalization for the extraction
# pipeline (PDF/PostScript/DOCX/EPUB → normalized plain text). `which` is
# used at daemon startup to preflight CLI tools (`pdftotext`, `ps2ascii`,
# `pandoc`); `unicode-normalization` provides the NFKC pass that collapses
# ligatures and fancy punctuation before storage so MCP tool results are
# token-efficient.
which = "6"
unicode-normalization = "0.1"

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"
axum = "0.8"

# Systemd
sd-notify = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
regex = "1"
libc = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"
ndarray = { version = "0.16", features = ["blas", "serde"] }
petgraph = "0.7"
# Tree-sitter (Tier 0e). Per-language grammar crates are added incrementally
# as `src/parsing/<lang>.rs` backends land — see plan
# `~/.claude/plans/help-me-design-software-ancient-flurry.md`. The bare
# `tree-sitter` core ships first so the trait + types compile before any
# concrete backend.
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-scala = "0.24"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
# Rholang grammar lives in the user's local rholang-rs workspace; depend by
# path. The published package name is `rholang-tree-sitter` (not the canonical
# `tree-sitter-rholang` style); aliased here so usage matches the convention.
# Migration path: switch to a published crate once available.
tree-sitter-rholang = { package = "rholang-tree-sitter", path = "/home/dylon/Workspace/f1r3fly.io/rholang-rs/rholang-tree-sitter" }
# MeTTa grammar lives in the user's local MeTTa-Compiler workspace; depend by
# path. The crate exports `language()` (function), not a `LANGUAGE` constant,
# so backend init calls `tree_sitter_metta::language()` and converts via
# `Into<tree_sitter::Language>`. Migration path: switch to a published crate
# once available.
tree-sitter-metta = { package = "tree-sitter-metta", path = "/home/dylon/Workspace/f1r3fly.io/MeTTa-Compiler/tree-sitter-metta" }
tree-sitter-clojure = "0.1"
# Formal-verification grammars (post-SOTA addition). Coq has no published
# tree-sitter crate yet — Coq's symbol/import extraction uses regex
# patterns in `src/parsing/coq.rs` (still implements LanguageBackend).
tree-sitter-tlaplus = "1.5"
tree-sitter-lean4 = "0.3"
# Rust backend uses the native `syn` parser instead of tree-sitter — replicates
# the proven pattern from MeTTa-Compiler's `tools/gc-root-audit/` static
# analysis. `proc-macro2 = { version = "1", features = ["span-locations"] }`
# is required for `Span::start().line` on stable Rust.
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
memmap2 = "0.9"
futures = "0.3"
tempfile = "3"
# SOTA Phase 3 (NCD clone detection): zstd compressor for the
# Cilibrasi-Vitányi 2005 Normalized Compression Distance metric.
zstd = { version = "0.13", default-features = false }
# SOTA Phase 6 (CVE supply chain): Cargo.lock + Python requirements parsing.
cargo-lock = "10"
# SOTA Phase 6 (secret detection): Shannon-entropy scoring.
entropy = "0.4"
# NOTE: `strsim` was removed (2026-05-23, Phase 3 of the integration
# plan `~/.claude/plans/pgmcp-is-already-partially-glittery-graham.md`).
# Rename detection in `tool_semver_break_audit.rs` now goes through
# `liblevenshtein::Transducer::with_transposition` over a
# `libdictenstein::DynamicDawgChar` — the automaton is asymptotically
# faster than the strsim O(N×L²) brute-force scan.
# SOTA Phase 9 (data engineering): SQL migration parsing.
sqlparser = "0.55"
# SOTA Phase 11 (commit topic drift): Porter stemming for TF-IDF.
rust-stemmers = "1.2"
# Per-call exclude_paths support for documented_tech_debt + any other
# tool that takes a glob list. Already a transitive dep via `ignore`;
# promoted to direct so the version is pinned explicitly.
globset = "0.4"
cudarc = { version = "0.19.4", features = ["cublas", "cublaslt", "cuda-version-from-build-system", "f16"] }
half = "2"
heed = "0.20"
bincode = "1"
# Already a transitive dep via sqlx; promoted to direct so the DbClient trait
# can use #[async_trait] on its method signatures.
async-trait = "0.1"

# ── Sibling-crate path deps (integration plan
#    `~/.claude/plans/pgmcp-is-already-partially-glittery-graham.md`) ──
#
# These five crates live next to pgmcp under `/home/dylon/Workspace/f1r3fly.io/`.
# All deps are non-feature-gated per pgmcp's `[features]`-free policy
# (CLAUDE.md: "no cargo features on pgmcp"). The sibling crates' own
# features are selected here at the dep site so future swaps stay surgical.
#
# - `libdictenstein`: dictionary backends — DynamicDawg{Char,U64},
#   DoubleArrayTrie{Char}, SuffixAutomaton{Char}, PathMapDictionary{Char},
#   **PersistentARTrieChar** (disk-backed mmap+WAL ACID), PersistentVocabARTrie.
# - `liblevenshtein`: Transducer (Standard / Transposition / MergeAndSplit),
#   the full phonetic framework (Phone<U> IPA algebra, articulatory
#   features, articulatory_edit_distance, .llev DSL, ~125 BCP-47 language
#   packs, PhoneticNormalizedDictionary, PhoneticPipelineBuilder,
#   PhoneticGrepOnline, TokenGrep, IPA + orthographic syllabification),
#   time-series MSM, WallBreaker, 8 cache decorators.
#   `parallel-grep` enables Rayon-parallel verification in PhoneticGrepOnline
#   (Phase 10).
# - `lling-llang`: WFST framework — 9 semirings, LatticeBuilder<W,B>,
#   composition (eager + lazy), determinize / minimize / connect /
#   ε-removal / weight pushing, Viterbi / n-best / beam-search, GPU paths.
# - `libgrammstein`: HybridLanguageModel (MKN n-gram + subword embeddings,
#   4 interpolation strategies), ModernBertEmbedder (768-dim, 8K context),
#   ModernBertRescorer, extractive Summarizer (MMR diversity), hierarchical-
#   agglomerative + c-TF-IDF + dendrogram topic extraction (crash-resume),
#   ParadigmDetector, Code Property Graph, TreeminerD subtree mining, GNN
#   semantic scorer, mimalloc allocator, AtomicVocabulary, LEB128 varint
#   n-gram keys, PrefetchingReader / corpus dedup pipeline. `mimalloc-alloc`
#   sets pgmcp's `#[global_allocator]` to mimalloc (Phase 11; the existing
#   `mallopt(M_ARENA_MAX, 2)` stays in main.rs per
#   `feedback_glibc_arena_cap.md`).
# - `llammer-pipeline`: extracted library form of llammer's WFST
#   correction pipeline. Imports flow into `src/wfst/lattice.rs` (Phase 9)
#   and the `correct_query` MCP tool (Phase 8).
libdictenstein = { path = "../libdictenstein", features = ["pathmap-backend", "persistent-artrie"] }
liblevenshtein = { path = "../liblevenshtein-rust", features = ["phonetic-rules", "embedded-rules", "serialization", "parallel-grep"] }
lling-llang = { path = "../lling-llang", features = ["levenshtein", "lm-rerank", "phonetic-rescore", "serde", "bincode-ser"] }
# `code-neural` is NOT enabled because it pulls `ort 2.x` (needs
# `ndarray 0.17`) while libgrammstein top-level pins `ndarray 0.16`.
# pgmcp's `gnn_semantic_issues` MCP tool (Phase 8, 20 of 20)
# ships ANYWAY: libgrammstein's `GnnSemanticScorer::detect_issues`
# is a heuristic CPG walk under the plain `code` feature — the
# `code-neural` flag gates a placeholder inference path that the
# current upstream detector does not actually consume. Enabling
# `code-neural` therefore only adds version-skew exposure without
# adding capability. Re-evaluate when libgrammstein bumps to
# ndarray 0.17 or the ort-side detector ships.
libgrammstein = { path = "../libgrammstein", features = ["mimalloc-alloc", "lling-llang-integration", "wfst-export", "serde-extras", "rag", "rag-hnsw", "neural-rescore", "candle-model", "subword", "code", "code-python", "code-rust", "code-javascript", "code-rholang", "code-metta"] }
llammer-pipeline = { path = "../llammer-pipeline", features = ["phonetic-rescore"] }

# Phase 11: install mimalloc as the global allocator (set in main.rs
# via `#[global_allocator]`). libgrammstein already pulls this
# transitively via its `mimalloc-alloc` feature; pgmcp's Cargo.toml
# adds it as a direct dep so the `mimalloc::MiMalloc` type is
# resolvable from `main.rs` without leaning on the transitive
# resolution path. Plan reference:
# ~/.claude/plans/pgmcp-is-already-partially-glittery-graham.md
# Phase 11.
mimalloc = "0.1"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.7", features = ["async_tokio"] }

[[bench]]
name = "mcp_tool_latency"
path = "benches/mcp_tool_latency.rs"
harness = false
# Note: `pgmcp-testing` is intentionally NOT a dev-dependency of this crate.
# Cargo cannot resolve the cycle pgmcp ↔ pgmcp-testing without two separate
# compilations of `pgmcp`. Cross-crate tests that exercise pgmcp's public API
# (e.g. `McpServer`) using `pgmcp-testing` mocks live under
# `pgmcp-testing/tests/`, where the dependency edge is one-way (testing →
# main) and the cycle does not arise.
#
# Real-Postgres integration tests (no Docker) also live under
# `pgmcp-testing/tests/` — see `tests/README.md` for the local setup.

[[test]]
name = "gpu_fallback_smoke"
path = "tests/gpu_fallback_smoke.rs"
