[package]
name = "pgmcp-testing"
version = "0.1.0"
edition = "2024"
description = "Test fixtures, mocks, and factories for pgmcp."
license = "Apache-2.0"
publish = false

# Consumed only via the parent crate's [dev-dependencies]. The parent
# (`pgmcp`) itself is a transitive dep here so we can `impl pgmcp::db::DbClient`
# for our mocks. The parent → testing → parent loop is fine because
# testing is dev-only on the parent side.
[dependencies]
pgmcp = { path = ".." }

# Mock state needs the same async + serde shapes as the production code.
async-trait = "0.1"
parking_lot = "0.12"
ndarray = { version = "0.16", features = ["blas", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Test harness deps. Promoted from dev-dependencies because they're used by
# `lib` modules (db_harness, cli_harness) that external test files import.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time", "process", "io-util"] }
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
dirs = "6"
toml = "0.8"
proptest = "1"
tempfile = "3"
anyhow = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
pgvector = { version = "0.4", features = ["sqlx"] }
crossbeam-channel = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
libc = "0.2"
arc-swap = "1"
rmcp = { version = "1.1", features = ["server"] }
postcard = { version = "1", features = ["use-std"] }
petgraph = "0.7"

[dev-dependencies]
arc-swap = "1"
rmcp = { version = "1.1", features = ["server"] }
assert_cmd = "2"
predicates = "3"

# Use a hyphenated name for the CLI command while keeping the source
# file `regen_goldens.rs` underscored (rustc idiomatic).
[[bin]]
name = "regen-goldens"
path = "src/bin/regen_goldens.rs"
