[package]
name = "pgmcp-testing"
version = "0.1.0"
edition = "2024"
description = "Test fixtures, mocks, and factories for pgmcp."
license = "Apache-2.0"
publish = false

# Cargo autodiscovers every `tests/*.rs` as its own `[[test]]` target. With 234
# such files that meant 234 independent crates, each running full O3 codegen and
# then statically linking the 282 MB `libpgmcp` rlib plus candle/ort/cudarc into
# a ~105 MB executable — ~23.5 GB of linker output to run 817 tests. Disable the
# autodiscovery and route every file through the single `tests/main.rs` target,
# which declares each file as a `mod`. One compile, one link.
autotests = false

# Consumed only via the parent crate's [dev-dependencies]. The parent
# (`pgmcp`) itself is a transitive dep here so we can `impl pgmcp::db::DbClient`
# for our mocks. The parent → testing → parent loop is fine because
# testing is dev-only on the parent side.
[dependencies]
pgmcp = { path = ".." }

# Sibling-crate path deps used by Phase 3+ tests (integration plan
# `~/.claude/plans/pgmcp-is-already-partially-glittery-graham.md`).
# Mirror pgmcp's dep choices so the test crate links the same versions.
libdictenstein = { path = "../../libdictenstein", features = ["pathmap-backend", "persistent-artrie"] }
liblevenshtein = { path = "../../liblevenshtein-rust", features = ["phonetic-rules", "embedded-rules", "serialization", "parallel-grep"] }

# Mock state needs the same async + serde shapes as the production code.
async-trait = "0.1"
parking_lot = "0.12"
ndarray = { version = "0.16", features = ["blas", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Test harness deps. Promoted from dev-dependencies because they're used by
# `lib` modules (db_harness, cli_harness) that external test files import.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time", "process", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
dirs = "6"
toml = "0.8"
proptest = "1"
tempfile = "3"
anyhow = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
pgvector = { version = "0.4.2", features = ["sqlx"] }
crossbeam-channel = "0.5"
dashmap = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
libc = "0.2"
arc-swap = "1"
rmcp = { version = "1.7", features = ["server"] }
postcard = { version = "1", features = ["use-std"] }
petgraph = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
# Used by the retrieval-quality eval (M2 token-holdout): load the BGE-M3
# tokenizer untruncated to find text beyond the embedding window. Mirror
# pgmcp's version/features.
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

[dev-dependencies]
arc-swap = "1"
rmcp = { version = "1.7", features = ["server"] }
assert_cmd = "2"
predicates = "3"

# The single consolidated integration-test target (see `autotests = false`).
# `tests/main.rs` declares every `tests/*.rs` file as a `mod`, so test names keep
# their file as a module prefix and existing filters keep working.
[[test]]
name = "all"
path = "tests/main.rs"

# Use a hyphenated name for the CLI command while keeping the source
# file `regen_goldens.rs` underscored (rustc idiomatic).
[[bin]]
name = "regen-goldens"
path = "src/bin/regen_goldens.rs"

# Retrieval-quality evaluation campaign (semantic vs hybrid vs text). Manual:
# needs a populated live pgmcp DB + a BGE-M3 embedder (CPU by default, --gpu for
# CUDA). See docs/evaluation/semantic-search-quality.md.
[[bin]]
name = "eval-retrieval"
path = "src/bin/eval_retrieval.rs"
