[package]
name = "pgmcp-webui"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "CUDA-free web UI asset and websocket crate for pgmcp"

[lib]
name = "pgmcp_webui"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
